<resources>
    <string name="app_name">Movies</string>
    <string name="search_movie">Search Movie</string>
    <string name="movie_name">Movie Name :</string>
    <string name="year">Year :</string>
    <string name="movie_name_hint">Movie Name</string>
    <string name="movie_not_found">Movie Not found</string>

    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">\?</string>

    <string name="action_settings">Settings</string>

    <string name="search_title">Search</string>
    <string name="reload_title">Reload</string>

    <string name="label_release_date">Release Date :</string>
    <string name="label_imdb_rated">Ratings :</string>
    <string name="label_metascore">Metascore :</string>
    <string name="label_synopsis">Synopsis :</string>
    <string name="label_casting">Casting :</string>
    <string name="suffix_rated">/10</string>
    <string name="label_type">Type :</string>
    <string name="label_runtime">Run Time :</string>
    <string name="label_production">Production :</string>
    <string name="default_search_message">Use the searchbar to find TV Shows &amp; Movies !</string>
    <string name="empty_search_message">No media found. Try Again !</string>
    <string name="na">N/A</string>
    <string name="MovieDetail">MovieDetail</string>
    <string name="bookmark">Bookmark</string>

    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="search_movie_key">SEARCH_MOVIE</string>
</resources>
